...
    <string name="timeMode_moon_waxingcrescent">Waxing Crescent</string>
    <string name="timeMode_moon_waxinggibbous">Waxing Gibbous</string>
    <string name="timeMode_moon_waninggibbous">Waning Gibbous</string>
    <string name="timeMode_moon_waningcrescent">Waning Crescent</string>

    <string name="configLabel_calendars">Calendars</string>
    <string name="configLabel_options">Options</string>
    <string name="configLabel_calendars_location">Location</string>

    <string name="calendar_solstice_displayName">Solstices, Equinoxes</string>
    <string name="calendar_solstice_summary">Solstices, Equinoxes, and Cross-Quarter days</string>  <!-- TODO -->
    <string name="calendar_moonPhase_displayName">Moon Phases</string>
    <string name="calendar_moonPhase_summary">Synodic month</string>
...
    <string name="calendar_astronomical_twilight_displayName">@string/timeMode_astronomical</string>
    <string name="calendar_astronomical_twilight_summary"/>
    <string name="calendar_gold_twilight_displayName">@string/timeMode_golden</string>
    <string name="calendar_gold_twilight_summary"/>
    <string name="calendar_blue_twilight_displayName">Blue Hour</string>    <!-- TODO -->
    <string name="calendar_blue_twilight_summary"/>
    <string name="calendar_daylight_displayName">Daylight</string>    <!-- TODO -->
    <string name="calendar_daylight_summary">Sunrise, sunset, and solar noon</string>    <!-- TODO -->

    <string name="configLabel_calendars_enabled">Calendar Integration</string>
    <string name="configLabel_calendars_enabled_summary">Supply events to the Calendar app.</string>

    <string name="configLabel_calendars_window">Calendar Window</string>
    <string name="configLabel_calendars_window_summary">A period starting <xliff:g example="one year ago" id="calendars_window_display">%1$s</xliff:g>, ending <xliff:g example="one year from now" id="calendars_window_display">%2$s</xliff:g>.</string>

    <string name="configLabel_calendars_window0">Window (start)</string>
...
    <string name="confirm_clear_message1">Remove calendar?</string>

    <string name="confirm_cancel_message">Cancel the running task?\n\nThis may result in calendars that are missing or incomplete.</string>
    <string name="confirm_cancel_yes">Confirm</string>
    <string name="confirm_cancel_no">Back</string>

    <string name="dialog_ok">OK</string>  <!-- TODO -->
    <string name="dialog_cancel">Cancel</string>  <!-- TODO -->

    <string name="action_addCalendar">Add Calendar</string>  <!-- TODO -->
    <string name="action_saveCalendar">Save Calendar (as .ical)</string>  <!-- TODO -->
    <string name="action_preview">Preview</string>  <!-- TODO -->
    <string name="action_share">Share</string>  <!-- TODO -->
    <string name="action_moreSettings">More Settings</string>  <!-- TODO -->
    <string name="action_settings">Settings</string>  <!-- TODO -->
    <string name="action_help">Help</string>   <!-- TODO -->
    <string name="action_openCalendar">Open</string>            <!-- snackbar version -->
    <string name="action_openCalendar1">Open Calendar</string>  <!-- actionbar version -->

    <string name="action_deleteReminder">Remove</string>    <!-- ImageButton content-description -->
    <string name="reminder_afterEvent">after start of event</string>    <!-- checkbox text -->

    <string-array name="reminder_method_display">   <!-- display values -->
        <item>Default</item>
...
    <string name="notificationChannel_main_desc">Notifications</string>  <!-- notification channel desc -->     <!-- TODO -->

    <string name="progress_title1">Creating Calendars</string>   <!-- TODO -->
    <string name="progress_title">Updating Calendars</string>
    <string name="progress_message">This may take several minutes…\n\nYou can close the app. The update will continue in the background.</string>

    <string name="title_dialog_msg">Title</string>  <!-- TODO -->
    <string name="title_dialog_saved_toast">Calendar title: %1$s</string>  <!-- TODO -->

    <string name="reminder_dialog_msg">Reminders</string>  <!-- TODO -->
    <string name="action_add_reminder">Add Reminder</string>  <!-- TODO -->

    <string name="flag_dialog_msg">Event Flags</string>  <!-- TODO -->
    <string name="flag_dialog_defaults_toast">Restored default event flags</string>  <!-- TODO -->

    <string name="template_dialog_msg">Event Template</string>  <!-- TODO -->
    <string name="template_dialog_title_label">Name</string>  <!-- TODO -->
    <string name="template_dialog_title_hint">Name</string>  <!-- TODO -->

    <string name="template_dialog_msg1">@string/action_preview</string>  <!-- preview dialog --> <!-- TODO -->
    <string name="template_preview_warning" tools:common="true"/>

...
    <string name="template_dialog_location_label">Location</string>  <!-- TODO -->
    <string name="template_dialog_location_hint">Location</string>  <!-- TODO -->

    <string name="template_dialog_saved_toast">Template saved</string>  <!-- TODO -->
    <string name="template_dialog_defaults_toast">Restored default template</string>  <!-- TODO -->

    <string name="templatestrings_dialog_msg">Event Strings</string>  <!-- TODO -->
    <string name="templatestrings_dialog_saved_toast">Strings saved</string>  <!-- TODO -->
    <string name="templatestrings_dialog_defaults_toast">Restored default strings</string>  <!-- TODO -->

    <string name="action_restore_defaults">Restore Defaults</string>  <!-- TODO -->

    <!-- cardinal directions -->
...
        <br/><br/>
        Use <b>: -> Add Calendar</b> (or the main checkbox) to add events to the Android calendar app.
        <br/><br/>
        Use <b>: -> Save Calendar</b> to save events to an .ics file that can be imported into other calendar apps.
    ]]></string>  <!-- TODO-->

    <string name="color_dialog_msg">Colour</string>
    <string name="color_dialog_ok">Select</string>
    <string name="color_dialog_cancel">Cancel</string>

    <string name="about_dialog_title">About</string>
    <string name="app_name">Suntimes Calendars</string>

    <string name="app_provider_version" tools:common="true"><![CDATA[<b>Suntimes:</b>]]> <xliff:g id="versionString">%1$s</xliff:g></string>
    <string name="app_provider_version_missing"><![CDATA[
        <font color="#e65100"><b>Missing Dependency!</b></font>
    ]]></string>
    <string name="app_provider_version_denied"><![CDATA[
...
        <a href="https://forrestguice.github.io/Suntimes/">forrestguice.github.io/Suntimes</a>
    ]]></xliff:g></string>
    <string name="app_donate_url"><![CDATA[
        %1$s is available gratis, but if it has proven its value, please
        <a href="https://forrestguice.github.io/Suntimes/donate">pay as you like</a>.
    ]]></string>
    <string name="app_legal1"><![CDATA[
        <b>Source Code:</b><br />
        Copyright &#169 2018-2026 Forrest Guice <br />
        Source code available under GPLv3.
    ]]></string>
    <string name="app_legal2"><![CDATA[
        <b>Translations:</b><br/>
...
