...
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:background="?android:attr/selectableItemBackground"
    android:descendantFocusability="blocksDescendants"
    android:baselineAligned="false">

    <FrameLayout
        android:id="@+id/icon_frame"
        android:layout_width="wrap_content" android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_options"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="?attr/icActionCalendar" app:fabSize="mini"
            app:backgroundTint="?attr/colorBackgroundFloating"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:contentDescription="@string/configLabel_options" />
...
