...
    android:background="?attr/dialogBackground">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center_vertical" android:background="?attr/colorPrimary">

        <ImageButton android:id="@+id/back_button"
            android:src="?attr/icActionBack"
            android:background="?selectableItemBackground"
            android:layout_width="48dp" android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dp" android:paddingStart="12dp"
            android:paddingRight="12dp" android:paddingEnd="12dp"
...
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="?attr/text_size_small"
                android:textColor="?android:textColorSecondary" />

        </LinearLayout>

        <ImageButton android:id="@+id/accept_button"
            android:src="?attr/icActionAccept" android:background="?selectableItemBackground"
            android:layout_width="64dp" android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/dialog_ok" />

...
